StereoKitC/stereokit.h

typedef int32_t bool32_t;
typedef enum log_ {
	log_none                      = 0,
	log_diagnostic,
	log_inform,
	log_warning,
	log_error
} log_;
typedef enum render_layer_ {
	render_layer_0                = 1 << 0,
	render_layer_1                = 1 << 1,
	render_layer_2                = 1 << 2,
	render_layer_3                = 1 << 3,
	render_layer_4                = 1 << 4,
	render_layer_5                = 1 << 5,
	render_layer_6                = 1 << 6,
	render_layer_7                = 1 << 7,
	render_layer_8                = 1 << 8,
	render_layer_9                = 1 << 9,
	render_layer_vfx              = 1 << 10,
	render_layer_first_person     = 1 << 11,
	render_layer_third_person     = 1 << 12,
	render_layer_all              = 0xFFFF,
	render_layer_all_regular      = render_layer_0 | render_layer_1 | render_layer_2 | render_layer_3 | render_layer_4 | render_layer_5 | render_layer_6 | render_layer_7 | render_layer_8 | render_layer_9,
	render_layer_all_first_person = render_layer_all & ~render_layer_third_person,
	render_layer_all_third_person = render_layer_all & ~render_layer_first_person,
} render_layer_;
SK_API bool32_t      sk_step               (void (*app_update)(void));
SK_API void          sk_run                (void (*app_update)(void), void (*app_shutdown)(void) sk_default(nullptr));
SK_API void          sk_run_data           (void (*app_update)(void *update_data), void *update_data, void (*app_shutdown)(void *shutdown_data), void *shutdown_data);
typedef struct vec2 {
	float x;
	float y;
} vec2;
typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;
typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;
typedef union matrix {
	vec4 row[4];
	float m[16];
} matrix;
typedef struct rect_t {
	float x;
	float y;
	float w;
	float h;
} rect_t;
typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;
typedef struct color32 {
	uint8_t r;
	uint8_t g;
	uint8_t b;
	uint8_t a;
} color32;
typedef struct color128 {
	float r;
	float g;
	float b;
	float a;
} color128;
typedef struct spherical_harmonics_t {
	vec3     coefficients[9];
} spherical_harmonics_t;
SK_API void         tex_on_load             (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context), void *context);
SK_API void         tex_on_load_remove      (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context));
typedef enum text_align_ {
	text_align_x_left       = 1 << 0,
	text_align_y_top        = 1 << 1,
	text_align_x_center     = 1 << 2,
	text_align_y_center     = 1 << 3,
	text_align_x_right      = 1 << 4,
	text_align_y_bottom     = 1 << 5,
	text_align_center       = text_align_x_center | text_align_y_center,
	text_align_center_left  = text_align_x_left   | text_align_y_center,
	text_align_center_right = text_align_x_right  | text_align_y_center,
	text_align_top_center   = text_align_x_center | text_align_y_top,
	text_align_top_left     = text_align_x_left   | text_align_y_top,
	text_align_top_right    = text_align_x_right  | text_align_y_top,
	text_align_bottom_center= text_align_x_center | text_align_y_bottom,
	text_align_bottom_left  = text_align_x_left   | text_align_y_bottom,
	text_align_bottom_right = text_align_x_right  | text_align_y_bottom,
} text_align_;
typedef enum sprite_type_ {
	sprite_type_atlased = 0,
	sprite_type_single
} sprite_type_;
SK_API sprite_t    sprite_create     (tex_t    sprite,           sprite_type_ type sk_default(sprite_type_atlased), const char *atlas_id sk_default("default"));
SK_API sprite_t    sprite_create_file(const char *filename_utf8, sprite_type_ type sk_default(sprite_type_atlased), const char *atlas_id sk_default("default"));
SK_API void        sprite_set_id     (sprite_t sprite, const char *id);
SK_API const char* sprite_get_id     (const sprite_t sprite);
SK_API void        sprite_addref     (sprite_t sprite);
SK_API void        sprite_release    (sprite_t sprite);
SK_API float       sprite_get_aspect (sprite_t sprite);
SK_API int32_t     sprite_get_width  (sprite_t sprite);
SK_API int32_t     sprite_get_height (sprite_t sprite);
SK_API vec2        sprite_get_dimensions_normalized(sprite_t sprite);
SK_API void        sprite_draw       (sprite_t sprite, const sk_ref(matrix) transform, color32 color sk_default({255,255,255,255}));
SK_API void        sprite_draw_at    (sprite_t sprite, matrix transform, text_align_ anchor_position, color32 color sk_default({255,255,255,255}));
typedef struct line_point_t {
	vec3    pt;
	float   thickness;
	color32 color;
} line_point_t;
SK_API void line_add      (vec3 start, vec3 end, color32 color_start, color32 color_end, float thickness);
SK_API void line_addv     (line_point_t start, line_point_t end);
SK_API void line_add_axis (pose_t pose, float size);
SK_API void line_add_list (const vec3 *points, int32_t count, color32 color, float thickness);
SK_API void line_add_listv(const line_point_t *in_arr_points, int32_t count);
typedef enum render_clear_ {
	render_clear_none  = 0,
	render_clear_color = 1 << 0,
	render_clear_depth = 1 << 1,
	render_clear_all   = render_clear_color | render_clear_depth,
} render_clear_;
typedef enum projection_ {
	projection_perspective = 0,
	projection_ortho = 1
} projection_;
SK_API void                  render_set_clip       (float near_plane sk_default(0.08f), float far_plane sk_default(50));
SK_API void                  render_set_fov        (float field_of_view_degrees sk_default(90.0f));
SK_API void                  render_set_ortho_clip (float near_plane sk_default(0.0f), float far_plane sk_default(50));
SK_API void                  render_set_ortho_size (float viewport_height_meters);
SK_API void                  render_set_projection (projection_ proj);
SK_API projection_           render_get_projection ();
SK_API matrix                render_get_cam_root   ();
SK_API void                  render_set_cam_root   (const sk_ref(matrix) cam_root);
SK_API void                  render_set_skytex     (tex_t sky_texture);
SK_API tex_t                 render_get_skytex     ();
SK_API void                  render_set_skylight   (const sk_ref(spherical_harmonics_t) light_info);
SK_API spherical_harmonics_t render_get_skylight   ();
SK_API void                  render_set_filter     (render_layer_ layer_filter);
SK_API render_layer_         render_get_filter     ();
SK_API void                  render_override_capture_filter(bool32_t use_override_filter, render_layer_ layer_filter sk_default(render_layer_all));
SK_API render_layer_         render_get_capture_filter     ();
SK_API bool32_t              render_has_capture_filter     ();
SK_API void                  render_set_clear_color(color128 color_gamma);
SK_API color128              render_get_clear_color();
SK_API void                  render_enable_skytex  (bool32_t show_sky);
SK_API bool32_t              render_enabled_skytex ();
SK_API void                  render_global_texture (int32_t register_slot, tex_t texture);
SK_API void                  render_add_mesh       (mesh_t mesh, material_t material, const sk_ref(matrix) transform, color128 color_linear sk_default({1,1,1,1}), render_layer_ layer sk_default(render_layer_0));
SK_API void                  render_add_model      (model_t model, const sk_ref(matrix) transform, color128 color_linear sk_default({1,1,1,1}), render_layer_ layer sk_default(render_layer_0));
SK_API void                  render_blit           (tex_t to_rendertarget, material_t material);
SK_API void                  render_screenshot     (const char *file, vec3 from_viewpt, vec3 at, int32_t width, int32_t height, float field_of_view_degrees);
SK_API void                  render_to             (tex_t to_rendertarget, const sk_ref(matrix) camera, const sk_ref(matrix) projection, render_layer_ layer_filter sk_default(render_layer_all), render_clear_ clear sk_default(render_clear_all), rect_t viewport sk_default({}));
SK_API void                  render_material_to    (tex_t to_rendertarget, material_t override_material, const sk_ref(matrix) camera, const sk_ref(matrix) projection, render_layer_ layer_filter sk_default(render_layer_all), render_clear_ clear sk_default(render_clear_all), rect_t viewport sk_default({}));
SK_API void                  render_get_device     (void **device, void **context);
SK_API void          hierarchy_push              (const sk_ref(matrix) transform);
SK_API void          hierarchy_pop               ();
SK_API void          hierarchy_set_enabled       (bool32_t enabled);
SK_API bool32_t      hierarchy_is_enabled        ();
SK_API const matrix* hierarchy_to_world          ();
SK_API const matrix* hierarchy_to_local          ();
SK_API vec3          hierarchy_to_local_point    (const sk_ref(vec3  ) world_pt);
SK_API vec3          hierarchy_to_local_direction(const sk_ref(vec3  ) world_dir);
SK_API quat          hierarchy_to_local_rotation (const sk_ref(quat  ) world_orientation);
SK_API pose_t        hierarchy_to_local_pose     (const sk_ref(pose_t) world_pose);
SK_API vec3          hierarchy_to_world_point    (const sk_ref(vec3  ) local_pt);
SK_API vec3          hierarchy_to_world_direction(const sk_ref(vec3  ) local_dir);
SK_API quat          hierarchy_to_world_rotation (const sk_ref(quat  ) local_orientation);
SK_API pose_t        hierarchy_to_world_pose     (const sk_ref(pose_t) local_pose);
SK_API sound_t      sound_generate       (float (*audio_generator)(float sample_time), float duration);
typedef struct file_filter_t {
	char ext[32];
} file_filter_t;
typedef enum picker_mode_ {
	picker_mode_open,
	picker_mode_save,
} picker_mode_;
SK_API void     platform_file_picker        (picker_mode_ mode, void *callback_data, void (*picker_callback)(void *callback_data, bool32_t confirmed, const char *filename), const file_filter_t *filters, int32_t filter_count);
SK_API void     platform_file_picker_sz     (picker_mode_ mode, void *callback_data, void (*picker_callback_sz)(void *callback_data, bool32_t confirmed, const char *filename_ptr, int32_t filename_length), const file_filter_t *in_arr_filters, int32_t filter_count);
typedef enum input_source_ {
	input_source_any           = 0x7FFFFFFF,
	input_source_hand          = 1 << 0,
	input_source_hand_left     = 1 << 1,
	input_source_hand_right    = 1 << 2,
	input_source_gaze          = 1 << 4,
	input_source_gaze_head     = 1 << 5,
	input_source_gaze_eyes     = 1 << 6,
	input_source_gaze_cursor   = 1 << 7,
	input_source_can_press     = 1 << 8,
} input_source_;
typedef enum button_state_ {
	button_state_inactive      = 0,
	button_state_active        = 1 << 0,
	button_state_just_inactive = 1 << 1,
	button_state_just_active   = 1 << 2,
	button_state_changed       = button_state_just_inactive | button_state_just_active,
	button_state_any           = 0x7FFFFFFF,
} button_state_;
typedef struct pointer_t {
	input_source_ source;
	button_state_ tracked;
	button_state_ state;
	ray_t         ray;
	quat          orientation;
} pointer_t;
SK_API void                  input_subscribe      (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void                  input_unsubscribe    (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void              backend_openxr_add_callback_pre_session_create(void (*xr_pre_session_create_callback)(void* context), void* context);
SK_API void              backend_openxr_add_callback_poll_event        (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer), void* context);
SK_API void              backend_openxr_remove_callback_poll_event     (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer));
SK_API void log_subscribe  (void (*log_callback)(log_ level, const char *text));
SK_API void log_unsubscribe(void (*log_callback)(log_ level, const char *text));