StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              sprite_create       (IntPtr sprite, SpriteType type, string atlas_id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              sprite_create_file  ([In] byte[] filename_utf8, SpriteType type, string atlas_id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                sprite_set_id       (IntPtr sprite, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              sprite_get_id       (IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sprite_addref       (IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sprite_release      (IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern float               sprite_get_aspect   (IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sprite_get_width    (IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sprite_get_height   (IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec2                sprite_get_dimensions_normalized(IntPtr sprite);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sprite_draw         (IntPtr sprite, in Matrix transform, Color32 color);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sprite_draw_at      (IntPtr sprite, Matrix transform, TextAlign anchor_position, Color32 color);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern void                line_add            (Vec3 start, Vec3 end, Color32 color_start, Color32 color_end, float thickness);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                line_addv           (LinePoint start, LinePoint end);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                line_add_axis       (Pose pose, float size);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                line_add_list       (in Vec3 points, int count, Color32 color, float thickness);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                line_add_listv      ([In] LinePoint[] in_arr_points, int count);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_clip     (float near_plane, float far_plane);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_fov      (float field_of_view_degrees);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_ortho_clip(float near_plane, float far_plane);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_ortho_size(float viewport_height_meters);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_projection(Projection proj);
		[DllImport(dll, CallingConvention = call                 )] public static extern Projection          render_get_projection();
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              render_get_cam_root ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_cam_root (in Matrix cam_root);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_skytex   (IntPtr sky_texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              render_get_skytex   ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_skylight (in SphericalHarmonics light_info);
		[DllImport(dll, CallingConvention = call                 )] public static extern SphericalHarmonics  render_get_skylight ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_filter   (RenderLayer layer_filter);
		[DllImport(dll, CallingConvention = call                 )] public static extern RenderLayer         render_get_filter   ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_override_capture_filter(int use_override_filter, RenderLayer layer_filter);
		[DllImport(dll, CallingConvention = call                 )] public static extern RenderLayer         render_get_capture_filter();
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 render_has_capture_filter();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_set_clear_color(Color color_gamma);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color               render_get_clear_color();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_enable_skytex(int show_sky);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 render_enabled_skytex();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_global_texture(int register_slot, IntPtr texture);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_add_mesh     (IntPtr mesh, IntPtr material, in Matrix transform, Color color_linear, RenderLayer layer);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_add_model    (IntPtr model, in Matrix transform, Color color_linear, RenderLayer layer);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_blit         (IntPtr to_rendertarget, IntPtr material);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                render_screenshot   (string file, Vec3 from_viewpt, Vec3 at, int width, int height, float field_of_view_degrees);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_to           (IntPtr to_rendertarget, in Matrix camera, in Matrix projection, RenderLayer layer_filter, RenderClear clear, Rect viewport);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_material_to  (IntPtr to_rendertarget, IntPtr override_material, in Matrix camera, in Matrix projection, RenderLayer layer_filter, RenderClear clear, Rect viewport);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                render_get_device   (IntPtr device, IntPtr context);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern void                hierarchy_push      (in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                hierarchy_pop       ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                hierarchy_set_enabled(int enabled);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 hierarchy_is_enabled();
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              hierarchy_to_world  ();
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              hierarchy_to_local  ();
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                hierarchy_to_local_point(in Vec3 world_pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                hierarchy_to_local_direction(in Vec3 world_dir);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                hierarchy_to_local_rotation(in Quat world_orientation);
		[DllImport(dll, CallingConvention = call                 )] public static extern Pose                hierarchy_to_local_pose(in Pose world_pose);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                hierarchy_to_world_point(in Vec3 local_pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                hierarchy_to_world_direction(in Vec3 local_dir);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                hierarchy_to_world_rotation(in Quat local_orientation);
		[DllImport(dll, CallingConvention = call                 )] public static extern Pose                hierarchy_to_world_pose(in Pose local_pose);

		///////////////////////////////////////////
